--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,7 @@
-mongo_user=root
-mongo_pass=123456
-mongo_host=db
-mongo_port=27017
 CONFIG_OBJECT=api.config.DevelopmentConfig
 LOGGER_NAME=noticias
 HOST=0.0.0.0
-MONGOALCHEMY_DATABASE=noticias
 SECRET_KEY=my-secret-key
+DATABASE_URL=postgresql://root:password@db/noticias
+FLASK_ENV=development
+JWT_SECRET_KEY=jwt-secret-key
