--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 Flask==1.1.1
-Flask-DotEnv
-Flask-Migrate
-Flask-Script
-Flask-MongoAlchemy
-marshmallow
-python-dotenv
-pymongo
+Flask-DotEnv==0.1.2
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.4.1
+Flask-User==1.0.1.5
+Flask-WTF==0.14.3
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
+psycopg2-binary==2.7.5
+python-dotenv==0.10.3
+python-slugify==3.0.3
+marshmallow==3.5.2
+flask-jwt-extended
 flask-cors
 -e .
